crates/tree-sitter-parallax/grammar.js
    source_file: $ => repeat($.item),

    // Comment syntax (both line and block comments)
    item: $ => seq(
      optional($.visibility),
      choice(
        $.function_item,
        $.type_def,
        $.enum,
        $.struct,
        $.trait,
        $.impl,
        $.module,
        $.use
      )
    ),

    // Corresponds to Visibility ::= "pub"? in EBNF
    visibility: $ => 'pub',

    // Renamed original 'function' rule to 'function_item' to avoid conflict
    function_sig: $ => seq(
      'fn',
      field('name', $.identifier),
      optional(field('generics', $.generic_parameters)),
      '(',
      optional(field('params', $.parameters)),
      ')',
      optional(seq('->', field('return_type', $.type))),
      optional(field('where_clause', $.where_clause))
    ),

    // Parameters
    parameters: $ => seq(
      $.parameter,
      repeat(seq(',', $.parameter)),
      optional(',')
    ),

    parameter: $ => prec.right('parameter', choice(
      seq(
        '...',
        field('name', $.identifier),
        optional(seq(':', field('type', $.type))),
        optional(seq('=', field('value', $.expression)))
      ),
      'self',
      seq(
        field('pattern', $.pattern),
        optional(seq(':', field('type', $.type))),
        optional(seq('=', field('value', $.expression)))
      )
    )),

    // Types
    type: $ => choice(
      $.never_type,
      prec.left('path', $.path),
      prec.right('function_type', $.function_type),
      $.tuple_type,
      prec.left(2, $.kind_app),  // Higher precedence than function_type
      $.array_type,
    ),

    tuple_type: $ => seq(
      '(',
      optional(seq(
        field('elements', seq(
          $.type,
          repeat(seq(',', $.type)),
          optional(',')
        ))
      )),
      ')'
    ),

    kind_app: $ => prec.left(2, seq(  // Same precedence as in type rule
      field('base', $.type),  // Allow any type as base, not just paths
      '<',
      field('args', seq(
        $.type,
        repeat(seq(',', $.type)),
        optional(',')
      )),
      '>'
    )),

    block: $ => seq(
      '{',
      repeat($.block_item),
      optional($.expression),
      '}'
    ),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // Path rules
    path: $ => prec.right('path', seq(
      optional('::'),
      $.path_segment,
      repeat(seq('::', $.path_segment))
    )),

    path_segment: $ => choice(
      $.identifier,
      'self',
      'super',
      'crate'
    ),

    integer_literal: $ => choice(
      seq($.decimal_literal, optional($.integer_suffix)),
      seq($.hex_literal, optional($.integer_suffix)),
      seq($.octal_literal, optional($.integer_suffix)),
      seq($.binary_literal, optional($.integer_suffix))
    ),

    decimal_literal: $ => /[0-9][0-9_]*[0-9]?/,
    string_literal: $ => choice(
      $.raw_string_literal,
      $.normal_string_literal,
      $.byte_string_literal
    ),

    normal_string_literal: $ => seq(
      '"',
      repeat(choice(
        token.immediate(prec(1, /[^\\"\n]+/)),  // Regular string content
        $.string_escape
      )),
      '"'
    ),

    binary_op: $ => choice(
      '->',  // ArrowOp ::= "->"
      '||',  // LogicalOrOp ::= "||"
      '&&',  // LogicalAndOp ::= "&&"
      choice('==', '!=', '<', '<=', '>', '>='),  // ComparisonOp ::= "==" | "!=" | "<" | "<=" | ">" | ">="
      choice('+', '-', '|', '^'),  // AdditionOp ::= "+" | "-" | "|" | "^"
      choice('*', '/', '%', '&', '<<', '>>'),  // MultiplicationOp ::= "*" | "/" | "%" | "&" | "<<" | ">>"
      'as'   // CastOp ::= "as"
    ),

    // Corresponds to UnaryOp ::= "-" | "!" | "&" | "*" in EBNF
    enum: $ => seq(
      'enum',
      field('name', $.identifier),
      optional(field('generic_params', $.generic_parameters)),
      optional(field('where_clause', $.where_clause)),
      '{',
      optional($.enum_variants),
      '}'
    ),

    enum_variants: $ => seq(
      $.enum_variant,
      repeat(seq(',', $.enum_variant)),
      optional(',')
    ),

    enum_variant: $ => seq(
      field('visibility', optional($.visibility)),
      field('name', $.identifier),
      optional(choice(
        field('struct_body', $.struct_body),
        field('tuple_body', $.tuple_body)
      ))
    ),

    // Structs
    struct: $ => seq(
      'struct',
      field('name', $.identifier),
      optional(field('generic_params', $.generic_parameters)),
      optional(field('where_clause', $.where_clause)),
      choice(
        field('body', $.struct_body),
        field('tuple_body', $.tuple_body),  // Add support for tuple structs
        ';'  // Support for unit structs
      )
    ),

    struct_body: $ => seq(
      '{',
      optional(seq(
        $.struct_field,
        repeat(seq(',', $.struct_field)),
        optional(',')
      )),
      '}'
    ),

    struct_field: $ => seq(
      field('visibility', optional($.visibility)),
      field('name', $.identifier),
      ':',
      field('type', $.type)
    ),

    tuple_body: $ => seq(
      '(',
      optional(seq(
        $.type,
        repeat(seq(',', $.type)),
        optional(',')
      )),
      ')'
    ),

    // Traits
    trait: $ => seq(
      'trait',
      field('name', $.identifier),
      optional(field('generic_params', $.generic_parameters)),
      optional(field('where_clause', $.where_clause)),
      optional(seq(':', field('bounds', $.trait_bounds))),
      '{',
      optional(field('items', $.trait_items)),
      '}'
    ),

    trait_bounds: $ => seq(
      $.trait_bound, // Use trait_bound rule
      repeat(seq('+', $.trait_bound)) // Use trait_bound rule
    ),

    trait_items: $ => repeat1($.trait_item),

    trait_item: $ => choice(
      seq(
        $.function_sig,
        optional(seq('=', field('default_impl', $.expression))),
        ';'
      ),
      seq(
        'type',
        field('name', $.identifier),
        ';'
      )
    ),

    // Implementations
    impl: $ => seq(
      'impl',
      optional($.generic_parameters),
      $.type,
      optional(seq('for', $.type)),
      optional($.where_clause),
      '{',
      optional($.impl_items),
      '}'
    ),

    impl_items: $ => repeat1($.impl_item),

    use: $ => seq(
      'use',
      field('tree', $.use_tree),
      ';'
    ),

    // Use tree structure for use declarations
    use_tree: $ => choice(
      seq(
        field('segment', $.path_segment),
        optional(seq('as', field('alias', $.identifier))),
        optional(field('sub_tree', seq('::', $.use_tree)))
      ),
      seq(
        '{',
        optional(seq(
          $.use_tree,
          repeat(seq(',', $.use_tree)),
          optional(',')
        )),
        '}'
      ),
      '*'
    ),

    // Generic parameters and where clauses
    generic_parameters: $ => seq(
      '<',
      optional(seq(
        $.generic_param,
        repeat(seq(',', $.generic_param)),
        optional(',')
      )),
      '>'
    ),

    generic_param: $ => seq(
      optional('phantom'),
      $.identifier,
      optional(seq(':', $.kind))
    ),

    where_clause: $ => prec.right('where', seq(
      'where',
      field('predicates', seq(
        $.where_pred,
        repeat(seq(',', $.where_pred)),
        optional(',')
      ))
    )),

    where_pred: $ => seq(
      field('type', $.type),
      ':',
      field('bounds', seq(
        $.trait_bound, // Use the specific trait_bound rule
        repeat(seq('+', $.trait_bound))
      ))
    ),

    // NEW rule for trait bounds (Path + optional Generics)
    match_expr: $ => prec.right(10, seq(  // Give match_expr a much higher precedence
      'match',
      field('scrutinee', $.expression),
      '{',
      optional(field('arms', $.match_arms)),
      '}'
    )),

    match_arms: $ => seq(
      $.match_arm,
      repeat(seq(',', $.match_arm)),
      optional(',')
    ),

    match_arm: $ => seq(
      field('pattern', $.pattern),
      '=>',
      field('body', $.expression)
    ),

    call_expr: $ => prec.right('call', seq(
      field('callee', $.expression),
      '(',
      optional(seq(
        field('args', $.argument),
        repeat(seq(
          ',',
          field('args', $.argument)
        )),
        optional(',')
      )),
      ')'
    )),

    field_access: $ => prec.right('field', seq(
      field('object', $.expression),
      '.',
      field('field', choice($.identifier, $.decimal_literal))
    )),

    // Corresponds to ArrayExpr ::= "[" (Expression ("," Expression)* ","?)? "]" in EBNF
    let_expr: $ => prec('let', seq(
      'let',
      field('pattern', $.pattern),
      optional(seq(':', field('type', $.type))),
      '=',
      field('value', $.expression)
    )),

    // Corresponds to StructExpr ::= Path StructBody in EBNF
    struct_expr: $ => prec.left('struct_literal', seq(
      field('path', $.path),
      field('body', $.expr_struct_body)
    )),

    // Corresponds to ExprStructBody in EBNF
    expr_struct_body: $ => seq(
      '{',
      optional(seq(
        field('fields', seq(
          $.field_init,
          repeat(seq(',', $.field_init)),
          optional(',')
        )),
        optional(field('base', $.base_struct))
      )),
      '}'
    ),

    // Corresponds to FieldInit ::= Identifier ":" Expression | Identifier in EBNF
    field_init: $ => choice(
      seq(field('name', $.identifier), ':', field('value', $.expression)),
      field('shorthand', $.identifier)
    ),

    // Corresponds to BaseStruct ::= ".." Expression in EBNF
    pattern: $ => prec('pattern', choice(
      $.identifier_pattern,
      $.unit_variant_pattern,
      $.literal,
      $.constructor_with_args,
      $.array_pattern,
      $.tuple_pattern,
      $.rest_pattern,
      prec.left('or_pattern', $.or_pattern),
      $.wildcard_pattern,
      $.struct_pattern
    )),

    tuple_pattern: $ => seq(
      '(',
      optional(field('elements', seq(
        $.pattern,
        repeat(seq(',', $.pattern)),
        optional(',')
      ))),
      ')'
    ),

    binary_expr: $ => {
      const table = [
        ['cast', ['as']],                                    // Highest precedence
        ['mult', ['*', '/', '%', '&', '<<', '>>']],
        ['add', ['+', '-', '|', '^']],
        ['compare', ['==', '!=', '<', '<=', '>', '>=']],
        ['and', ['&&']],
        ['or', ['||']],
        ['arrow', ['->']],                                   // Lowest precedence
      ];

      return choice(...table.map(([precedence, operators]) =>
        prec.left(precedence, seq(
          field('left', $.expression),
          field('op', choice(...operators)),
          field('right', $.expression)
        ))
      ));
    }
  }
}); 
